# formseher

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  README.md  a-team.pro  formseher.pro  global.pri
TeamBdbTool/: TeamBdbTool.pro  myIcons.qrc
TeamBdbTool/form/: choosealgdialog.ui  committodbdialog.ui  teambdbtool.ui
TeamBdbTool/include/: choosealgdialog.h  committodbdialog.h  mypoint.h  teambdbtool.h
TeamBdbTool/src/: choosealgdialog.cpp  committodbdialog.cpp  main.cpp  mypoint.cpp  teambdbtool.cpp
algorithms/: algorithms.pro  pictureprepare.cpp  pictureprepare.h
algorithms/include/: algorithm.h  algorithms.h  algorithms_global.h  constantNumbers.h  line.h  mathutil.h  picprepare.h  pointercompare.h
algorithms/src/: algorithm.cpp  algorithms.cpp  line.cpp  mathutil.cpp  picprepare.cpp
algorithms/utils/: databaseExample.json
app/: app.pro
app/form/: algorithmcontrolwidget.ui  mainwindow.ui
app/include/: algorithmconfigdialog.h  algorithmcontroller.hpp  algorithmcontrolwidget.h  algorithmworker.h  mainwindow.h  videoinput.h  worker.hpp
app/src/: algorithmconfigdialog.cpp  algorithmcontroller.cpp  algorithmcontrolwidget.cpp  algorithmworker.cpp  main.cpp  mainwindow.cpp  videoinput.cpp  worker.cpp
haffdbtool/: haffdbtool.pro
haffdbtool/form/: addlinedialog.ui  colorchooserwidget.ui  databasewidget.ui  drawinfodialog.ui  hdbmainwindow.ui  imagewidget.ui  (+3 more)
include/: algorithm.h  algorithmconfigdialog.h  line.h  mainwindow.h
src/: DisplayImage.cpp  algorithm.cpp  algorithmconfigdialog.cpp  line.cpp  main.cpp  mainwindow.cpp
test/: algorithmtest.h  main.cpp  mysecondtest.h  mytest.h  test.pro  tst_testtest.cpp
(+139 files in other folders)
